st api change , result temp changes and faq remove img css

--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -167,7 +167,7 @@
         </div>
       </div>   
       <div class="bottom_sec d-flex">
-        <div class="col-6 left_sec">  
+        <div class="col-6 left_sec d-none">  
           <!--          
           <div class="multi-select mb-2">         
             <label class="kr-sg-toggle">                                       
@@ -178,7 +178,7 @@
               </div>
             </label>
           </div> -->
-          <div class="kr-sg-input-text mb-2 mt-3 d-none"> 
+          <div class="kr-sg-input-text mb-2 mt-3 "> 
              <!-- image optional preview related changes -->
              <div class="d-flex justify-content-between align-items-center">
               <div class="label-text w-100">{{"addFaq.image_optional" | translate}} </div>
@@ -189,7 +189,7 @@
           </div>
           <!-- <div class="upload-image-size-info">Upload Image Dimensions of 200px by 400px </div> -->
         </div>
-        <div class="col-6 right_sec">        
+        <div class="col-12 right_sec">        
           <div class="content-data p-0 bg-transparent mt-4 h-auto">
             <!-- <ng-container *ngIf="image && image.url">
               <div class="preview-title mt-3 pt-1">IMAGE</div>
