--- a/findly-builder/src/app/components/search-interface/search-interface.component.scss
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.scss
@@ -324,6 +324,9 @@
                                     line-height: 20px;
                                     margin-bottom: 5px;
                                 }
+                                .alignTextCentre{
+                                    text-align: center;
+                                }
                                 .r-desc{
                                     color: #9AA0A6;
                                     font-weight: normal;
