FLY-1470,image url css

--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -190,7 +190,7 @@
           <!-- <div class="upload-image-size-info">Upload Image Dimensions of 200px by 400px </div> -->
         </div>
         <div class="col-12 right_sec">        
-          <div class="content-data p-0 bg-transparent mt-4 h-auto">
+          <div class="content-data p-0 bg-transparent mt-3 h-auto">
             <!-- <ng-container *ngIf="image && image.url">
               <div class="preview-title mt-3 pt-1">IMAGE</div>
               <div class="responsePreviewBlock adjust-height">
@@ -221,7 +221,7 @@
     </div>
   </div>
     </div>
-    <div class="d-flex mt-2" *ngIf="(currentEditIndex === index)">
+    <div class="d-flex mt-4 ml-2" *ngIf="(currentEditIndex === index)">
       <label>{{"addFaq.add_conditions" | translate}}</label>
       <div>
         <label class="kr-sg-toggle with-label" >
