--- a/findly-builder/src/app/components/add-faq/add-faq.component.scss
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.scss
@@ -371,7 +371,8 @@
                     display: flex;
                     flex-wrap: wrap;
                     padding: 10px;
-                    margin: 20px 0;
+                    margin: 20px -13px;
+                    width: 982px;
                     .info_img{
 
                     }
@@ -381,6 +382,7 @@
                         font-size: 12px;
                         line-height: 15px;
                         margin-left: 10px;
+                        margin-top: 3px;
                     }
                     .know-more-data{
                         color: #0D6EFD;
