--- a/findly-builder/src/app/components/team-management/team-management.component.html
+++ b/findly-builder/src/app/components/team-management/team-management.component.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="col-8 title text-right delete-action p-0" *ngIf="selcectionObj && selcectionObj.selectedCount">
-                <button id='btn_delete' class="kr-sg-button-danger btn_lg" (click)="deleteFacets(null,true)">{{'teams.remove'| translate}}</button>
+                <button id='btn_delete' class="kr-sg-button-danger btn_lg" (click)="deleteFacets(null,selcectionObj.selectedCount)">{{'teams.remove'| translate}}</button>
             </div> 
         </div>
         <div class="table-container-data-teams">
