--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -320,7 +320,7 @@
                             <span class="tooltip-text"><img src="assets/icons/help-annotation.svg">
                               <span class="tooltiptext">
                                 <div class="t-text">Use the annotate option to extract only the desired FAQs by marking question & answer pairs</div>
-                                <div class="learn_more">Learn More</div>
+                                <div class="learn_more" ><a href="https://docs.kore.ai/searchassist/source-management/faqs/#Annotate_Extract" target="_blank">Learn More</a></div>
                               </span>
                             </span>
                          
