thumbnails and result template fix

--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -294,7 +294,10 @@
                               <div class="uploaded-file-name" [ngClass]="{'error':(fileObj.fileUploadError && !fileObj.fileUploadInProgress)}">
                                 <div class="file-close-text">
                                   <div class="d-flex align-items-center">
-                                    <img class="type_img" src="assets/icons/file_type_image.svg">
+                                    <img  *ngIf="fileObj.file_ext === 'pdf'"class="type_img" src="assets/icons/file_type_image.svg">
+                                    <img *ngIf="fileObj.file_ext === 'docx'" class="type_img" src="assets/icons/doc_logo.png">
+                                    <img *ngIf="fileObj.file_ext === 'txt'" class="type_img" src="assets/icons/txt_icon.png">
+                                    <img *ngIf="fileObj.file_ext === 'xlsx'" class="type_img" src="assets/icons/excel_logo.svg">
                                     <div class="file-name" [innerHTML]="fileObj.fileName"></div>
                                   </div>
                                   <img src="assets/images/close.svg" class="close-file adjust_z_index" (click)="removeFile()">
