--- a/findly-builder/src/app/components/summary/summary.component.scss
+++ b/findly-builder/src/app/components/summary/summary.component.scss
@@ -277,7 +277,7 @@
                     font-size: 14px;
                     line-height: 20px;
                     color: #0D6EFD;
-                    //cursor: pointer;
+                    cursor: pointer;
                     right: 25px;
                     top: 20px;
                 }   
